--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "illuminate/notifications": "~8.0 || ~9.0 || ~10.0 || ~11.0",
         "illuminate/support": "~8.0 || ~9.0 || ~10.0 || ~11.0",
         "symfony/http-client": "^7.0",
-        "memarzade-dev/customsms": "*"
+        "memarzade-dev/customsms": "v1.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
