--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "illuminate/notifications": "~8.0 || ~9.0 || ~10.0 || ~11.0",
         "illuminate/support": "~8.0 || ~9.0 || ~10.0 || ~11.0",
         "symfony/http-client": "^7.0",
-        "memarzade-dev/customsms": "*"
+        "memarzade-dev/customsms": "dev-master"
     },
     "require-dev": {
 
@@ -49,5 +49,7 @@
         "allow-plugins": {
             "php-http/discovery": true
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
