--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
         "php": ">=8.2",
         "illuminate/notifications": "~8.0 || ~9.0 || ~10.0 || ~11.0",
         "illuminate/support": "~8.0 || ~9.0 || ~10.0 || ~11.0",
-        "symfony/http-client": "^7.0",
-        "memarzade-dev/customsms": "*"
+        "symfony/http-client": "^7.0"
     },
     "require-dev": {
 
